# armchr

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md
code-splitter-agent/: CLAUDE.md  Dockerfile  EXPLAINER.md  Makefile  QUICKSTART.md  README.md  config.example.yaml  docker-compose.yml  example.py  pyproject.toml  requirements.txt  setup.py  source.example.yaml  test_resplit.py  test_treesitter.py
code-splitter-agent/scripts/: run_splitter.sh
code-splitter-agent/src/code_splitter/: __init__.py  __main__.py  agent.py  cli.py  git_integration.py  language_support.py  llm_client.py  main.py  models.py  phase1_analysis.py  phase2_graph.py  phase3_grouping.py  phase4_splitting.py  phase5_validation.py
code-splitter-agent/tests/: test_basic.py  test_git_integration.py
code_explainer_ui/: .dockerignore  CLAUDE.md  Makefile  README.md  package-lock.json
code_explainer_ui/backend/: .env.example  .gitignore  README.md  github-service.js  mcp-server-cjs.js  mcp-server.js  mcp-server.mjs  package-lock.json  package.json  review-service.js  server.js
code_explainer_ui/frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  webpack.config.js
code_explainer_ui/frontend/public/: index.html
code_explainer_ui/frontend/public/assets/: README.md  github-pat-guide.md
code_explainer_ui/frontend/src/: App.js  featureFlags.js  index.css
code_explainer_ui/frontend/src/components/: Breadcrumbs.js  CommitsPage.js  (+9 more)
docs/: github-integration-options.md
scripts/: armchair.sh  run_explainer.sh  run_splitter.sh  setup_armchair.sh  start_ui.sh
(+5 files in other folders)
